--- a/code/questionnaire/src/main/webapp/questionnaire/css/form-elements.css
+++ b/code/questionnaire/src/main/webapp/questionnaire/css/form-elements.css
@@ -10,7 +10,7 @@ textarea.form-control {
     padding: 0 20px;
     vertical-align: middle;
     background: #fff;
-    border: 3px solid #fff;
+    border: 1px solid #505050
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 300;
